# DuctTapeDB

./: .gitignore  LICENSE  README.md  main  pyproject.toml  pytest.ini  zz.py
.github/workflows/: ci.yml
examples/api/: main.py
examples/async_inserts/: example.py
src/: __init__.py  ducttapedb.py  ducttapemodel.py  validators.py
src/ducttapedb/: __init__.py  ducttapedb.py  ducttapemodel.py
src/ducttapedb/autosafetytapedb/: __init__.py  model.py  veryautomodel.py
src/ducttapedb/ducttapedb/: ducttapemodel.py
src/ducttapedb/hookloopdb/: __init__.py  controller.py  model.py  table.py
src/ducttapedb/safetytapedb/: __init__.py  model.py  table.py
src/hookloopdb/: controller.py  model.py  table.py
tests/: data.py  test_async.py  test_bulk.py  test_db.py  test_db_no_context.py  test_model.py  test_model_db.py  test_safety.py  test_unit.py  test_validators.py
