[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ducttapedb"
version = "0.1.0"
description = "A lightweight SQLite-backed NoSQL-like database."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["database", "nosql", "sqlite"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = ["pydantic>=2.0", "sqlite3"]

[tool.setuptools.packages]
find = { where = ["src"] }
